# peanut-shell

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yaml  dockerhub-image.yaml
endpoints/: __init__.py
http_requests/: __init__.py
http_requests/rerank/: rerank_request.py
http_responses/: __init__.py
http_responses/rerank/: rerank_response.py
models/: __init__.py  rerank_result.py
services/: __init__.py  rerank_service.py
services/cross_encoder/: cross_encoder_rerank_service.py
